Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553NET.CS

            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_PlayWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_PlayWr(UInt16[] buf, UInt16 bufcount, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_RTConfig(UInt32 configval, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTCreateList@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_RTCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTCreateMsg@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_RTCreateMsg(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTGetMsg@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_RTGetMsg(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTReset@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_RTReset(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTResponseTimeSet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_RTResponseTimeSet(Int32 resptime, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTSetMode@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_RTSetMode(UInt32 configval, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTSWDRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_RTSWDRd(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTSWDWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_RTSWDWr(UInt16 swdval, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_RTSyncDefine@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_RTSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ValPackCWD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_ValPackCWD(Int32 taval, Int32 trflag, Int32 saval, Int32 wcval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ValUnpackCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ValUnpackCWD(UInt16 cwdval, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 wcval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCCreateListEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, UInt16[] data, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCCreateListExx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, UInt16[] data, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCGetMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCGetMsg(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCIMGapRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCIMGapRd(ref UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCIMGapWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCIMGapWr(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedBranchEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBranchEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 opcode, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedCallEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedCallEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 opcode, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedLogEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedLogEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 opcode, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedNop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedNop(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedRetryEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedRetryEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 retryflag, UInt16 retries, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedUser@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedUser(UInt32 useraddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSetEntry@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSetEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTransmitMsgBlkEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitMsgBlkEx(Int32 writeflag, Int32 count, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)] XMITFIELDS1553[] xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTransmitMsgBlkInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitMsgBlkInit(Int32 maxcount, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTransmitMsgBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitMsgBlkRd(Int32 count, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] XMITFIELDS1553[] xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTransmitMsgBlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitMsgBlkWr(Int32 count, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] XMITFIELDS1553[] xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_BlkAddr(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkOptRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_BlkOptRd(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkOptWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BlkOptWr(UInt16 rtopt, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkPtrRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BlkPtrRd(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkPtrWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_BlkPtrWr(UInt32 descaddr, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BlkRd(UInt16[] block, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkReset@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BlkReset(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkSWDRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_BlkSWDRd(Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkSWDWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BlkSWDWr(UInt16 swdval, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BlkWipe(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BlkWr(UInt16[] block, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChConfig@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChConfig(Int32 enableflag, Int32 typeval, UInt16 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsRunning@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsRunning(Int32 channum, IntPtr handleval);
